src/test/ui/unsized/unsized-trait-impl-self-type.stderr
error[E0277]: the size for values of type `X` cannot be known at compilation time
  --> $DIR/unsized-trait-impl-self-type.rs:10:27
   |
LL | struct S5<Y>(Y);
   |           - required by this bound in `S5`
LL | 
LL | impl<X: ?Sized> T3<X> for S5<X> {
   |      -                    ^^^^^ doesn't have a size known at compile-time
   |      |
   |      this type parameter needs to be `std::marker::Sized`
   |
help: you could relax the implicit `Sized` bound on `Y` if it were used through indirection like `&Y` or `Box<Y>`
  --> $DIR/unsized-trait-impl-self-type.rs:8:11
   |
LL | struct S5<Y>(Y);
   |           ^  - ...if indirection were used here: `Box<Y>`
   |           |
   |           this could be changed to `Y: ?Sized`...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
